// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Notification Item should be able to render warning message 1`] = `
<div
  aria-selected={false}
  className="root"
  data-level="warning"
  role="listitem"
>
  message
</div>
`;

exports[`Project Notification Item should print correctly 1`] = `
<div
  aria-selected={false}
  className="root"
  data-level="info"
  role="listitem"
>
  message
</div>
`;
